[tool.poetry]
name = "rpcv"
version = "0.1.0"
description = ""
authors = ["chalupaul <me@chalupaul.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-rebar = "^1.11.0"
python-dotenv = "^0.10.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
tox = "^3.14.2"
bandit = "^1.6.2"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | .venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"