[tool.poetry]
name = "rpcv"
version = "0.1.0"
description = ""
authors = ["chalupaul <me@chalupaul.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-rebar = "^1.11.0"
Flask-DotEnv = "^0.1.2"
python-dotenv = "^0.10.3"
flask_dotenv = "^0.1.2"
marshmallow_enum = "^1.5.1"
aws-wsgi = "^0.2.3"
structlog = "^19.2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
bandit = "^1.6.2"
pytest-cov = "^2.8.1"
aws-sam-cli = "^0.38.0"
awscli = "^1.16.308"
doit = "^0.32.0"
cfn-lint = "^0.26.1"
toml = "^0.10.0"

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | .venv
)/
'''

[tool.poetry.scripts]
rpcv = 'rpcv:run_app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"