[tool.poetry]
name = "rpcv"
version = "0.1.0"
description = ""
authors = ["chalupaul <me@chalupaul.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-rebar = "^1.11.0"
python-dotenv = "^0.10.3"
aws-wsgi = "^0.2.3"
structlog = "^19.2.0"
marshmallow-enum = "^1.5.1"
Flask-DotEnv = "^0.1.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
bandit = "^1.6.2"
aws-sam-cli = "^0.38.0"
awscli = "^1.16.308"
doit = "^0.32.0"
cfn-lint = "^0.26.1"
toml = "^0.10.0"
coverage = "^5.0.1"

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | .venv
)/
'''

[tool.poetry.scripts]
rpcv = 'rpcv.api.app:run_app'
ci-gen-deps = 'util.build_tools:poetry_wrapper'
ci-distribute-deps = 'util.build_tools:distribute_requirements'
ci-get-last-coverage = 'util.build_tools:poetry_wrapper_coverage'

[pytest]
junit_family = "legacy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"